--- a/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj
+++ b/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console_String_LIB.h" />
+    <ClInclude Include="Simple_math_LIB.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
