Add library GAUSS_LIB.h

--- a/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj.filters
+++ b/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Simple_math_LIB.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="GAUSS_LIB.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
