Добавлена библиотека MyGraphics.h.

--- a/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj.filters
+++ b/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="GAUSS_LIB.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="f4d_l.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="mygraphics.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="wlib4.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
