--- a/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj
+++ b/Auto_Compensation_Interference/Auto_Compensation_Interference.vcxproj
@@ -146,10 +146,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Console_String_LIB.h" />
+    <ClInclude Include="f4d_l.h" />
     <ClInclude Include="GAUSS_LIB.h" />
+    <ClInclude Include="mygraphics.h" />
     <ClInclude Include="Simple_math_LIB.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="wlib4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Auto_Compensation_Interference.cpp" />
